--- a/package.json
+++ b/package.json
@@ -22,12 +22,23 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "next": "16.0.1",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.552.0",
+    "tailwind-merge": "3.3.1",
+    "tailwindcss-animate": "1.0.7",
+    "@expo/vector-icons": "15.0.3"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "^19.2.0",
     "@types/react-native-vector-icons": "^6.4.18",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "@types/react-dom": "19.2.2",
+    "@types/node": "24.10.0",
+    "tailwindcss": "^4.1.9",
+    "postcss": "8.5.6"
   },
   "private": true
 }
