--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/drawer": "^7.5.10",
     "@react-navigation/native": "^7.1.18",
@@ -25,6 +26,7 @@
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
+    "@types/expo": "^32.0.13",
     "@types/react": "~19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.9.2"
